# adfpy

./: .flake8  .gitignore  404.html  README.md  deploy.py  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  lint_test.yml  linting.yml  release.yml
adfpy/: activity.py  custom_types.py  deploy.py  error.py  pipeline.py  trigger.py
adfpy/activities/: control.py  execution.py
adfpy/datasets/: file_based.py  main.py
better_adf/: activity.py  pipeline.py
better_adf/activities/: control.py  execution.py
docs/: getting_started.md  index.md
docs/user_guide/: custom_activities.md  deploying.md  pipelines.md  triggers.md
examples/complex_extraction_ingestion_flow/: main.py  no_watermark_pipeline.py  watermark_pipeline.py
examples/config_driven_example/: main.py  pipeline_config.yml
examples/simple_copy_pipeline/: main.py
getting_started/: index.html
pyadf/: pipeline.py
pyadf/activities/: control.py  execution.py
search/: search_index.json
tests/: test_activity.py  test_deploy.py  test_trigger.py
tests/activities/: test_control.py
user_guide/custom_activities/: index.html
user_guide/deploying/: index.html
user_guide/pipelines/: index.html
user_guide/triggers/: index.html
