[tool.poetry]
name = "adfpy"
version = "0.0.0"
description = "A Pythonic wrapper for Azure Data Factory"
authors = ["Daniel van der Ende <daniel.vanderende@gmail.com>"]
license = "Apache"
readme = "README.md"
homepage = "https://github.com/danielvdende/adfpy"
repository = "https://github.com/danielvdende/adfpy"
keywords = ["azure", "data", "factory"]

[tool.poetry.dependencies]
python = "^3.8"
azure-mgmt-datafactory = "^2.2.1"
azure-identity = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
mypy = "^0.961"

[tool.poetry.scripts]
adfpy-deploy = "adfpy.deploy:run_deployment"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
