[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adfpy"
version = "0.0.0"
description = "A Pythonic wrapper for Azure Data Factory"
authors = [
    { name ="Daniel van der Ende", email = "daniel.vanderende@gmail.com"},
]
license = { text="Apache-2.0" }
readme = "README.md"
homepage = "https://github.com/danielvdende/adfpy"
repository = "https://github.com/danielvdende/adfpy"
keywords = ["azure", "data", "factory"]

requires-python = ">=3.8"

dependencies = [
    "azure-mgmt-datafactory >= 2.2.1, <2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>= 7.2.0, <8",
    "flake8>= 4.0.1, <5",
    "coverage>=6.3.2, <7",
    "pytest-cov>=3.0.0, <4",
    "mypy>=0.961, <1"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[project.scripts]
adfpy-deploy = "adfpy.deploy:run_deployment"

[tool.hatch.envs.default]
features = [
    "dev",
]

[tool.hatch.envs.default.scripts]
lint  = "flake8 adfpy"
tests = "pytest --cov=adfpy tests"
typecheck = "mypy adfpy"

[tool.hatch.envs.docs]
features = [
    "docs"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
